# fedimint

./: .backportrc.json  .cargo-crap.toml  .clippy.toml  .codecov.yml  .dockerignore  .envrc  .gitattributes  .gitignore  .lycheeignore  .mprocs.yaml  .replit  .rustfmt.toml  .semgrep.all.yaml  .semgrep.log.yaml  .semgrep.yaml  .taplo.toml  .tmuxinator.yml  .typos.toml  CAHNGELOG.md  CHANGELOG.md  CLAUDE.md  CNAME  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.integrationtest  HACKING.md  LICENSE  README.md  _typos.toml  ayu.css  codecov.yml  crates.js  dark.css  default.nix  deny.toml  docker-compose.yaml  flake.crane.nix  flake.nix  (+18 more)
config/: Cargo.toml
config/examples/: configgen.rs
config/src/: lib.rs
database/: Cargo.toml
database/src/: batch.rs  lib.rs  mem_impl.rs  sled_impl.rs
devimint/: Cargo.toml  all.html  build.rs  enum.ClnOrLnd.html  enum.LightningNode.html  enum.LightningNodeName.html  fn.dev_fed.html  fn.external_daemons.html  fn.open_channel.html  fn.run_devfed_test.html  index.html  macro.cmd.html  macro.poll_almost_equal!.html  macro.poll_almost_equal.html  macro.poll_eq!.html  macro.poll_eq.html  sidebar-items.js  struct.Bitcoind.html  struct.DevFed.html  struct.Electrs.html  struct.Esplora.html  struct.ExternalDaemons.html  struct.Faucet.html  struct.Gatewayd.html  struct.Lightningd.html  struct.Lnd.html  struct.RunDevfedTestBuilder.html
devimint/cli/: enum.Cmd.html  enum.RpcCmd.html  fn.cleanup_on_exit.html  fn.devimint_static_data_dir.html  fn.exec_user_command.html  fn.handle_command.html  fn.handle_dev_fed_command.html  fn.random_test_dir_suffix.html  fn.rpc_command.html  fn.run_ui.html  fn.setup.html  fn.update_test_dir_link.html  fn.write_ready_file.html  index.html  sidebar-items.js  struct.CommonArgs.html  struct.FaucetOpts.html
devimint/devfed/: fn.dev_fed.html  fn.spawn_drop.html  index.html  sidebar-items.js  struct.DevFed.html  struct.DevJitFed.html  type.JitArc.html
devimint/envs/: constant.FM_BACKWARDS_COMPATIBILITY_TEST_ENV.html  constant.FM_BITCOIND_BASE_EXECUTABLE_ENV.html  constant.FM_BITCOIN_CLI_BASE_EXECUTABLE_ENV.html  constant.FM_BITCOIN_RPC_URL_ENV.html  constant.FM_BTC_CLIENT_ENV.html  constant.FM_CLIENT_DIR_ENV.html  constant.FM_CLN_SOCKET_ENV.html  constant.FM_DATA_DIR_ENV.html  constant.FM_DEVIMINT_CMD_INHERIT_STDERR_ENV.html  constant.FM_DEVIMINT_FAUCET_BASE_EXECUTABLE_ENV.html  constant.FM_DEVIMINT_RUN_DEPRECATED_TESTS_ENV.html  constant.FM_DEVIMINT_STATIC_DATA_DIR_ENV.html  constant.FM_ELECTRS_BASE_EXECUTABLE_ENV.html  constant.FM_ESPLORA_BASE_EXECUTABLE_ENV.html  constant.FM_FAUCET_BASE_EXECUTABLE_ENV.html  constant.FM_FAUCET_BIND_ADDR_ENV.html  constant.FM_FEDERATIONS_BASE_PORT_ENV.html  constant.FM_FEDIMINTD_BASE_EXECUTABLE_ENV.html  constant.FM_FEDIMINT_CLI_BASE_EXECUTABLE_ENV.html  constant.FM_FEDIMINT_DBTOOL_BASE_EXECUTABLE_ENV.html  constant.FM_FED_SIZE_ENV.html  constant.FM_GATEWAYD_BASE_EXECUTABLE_ENV.html  constant.FM_GATEWAY_API_ADDR_ENV.html  constant.FM_GATEWAY_BASE_PORT_ENV.html  constant.FM_GATEWAY_CLI_BASE_EXECUTABLE_ENV.html  constant.FM_GATEWAY_CLN_EXTENSION_BASE_EXECUTABLE_ENV.html  constant.FM_GATEWAY_DATA_DIR_ENV.html  constant.FM_GATEWAY_IROH_LISTEN_ADDR_ENV.html  constant.FM_GATEWAY_LISTEN_ADDR_ENV.html  constant.FM_GATEWAY_METRICS_LISTEN_ADDR_ENV.html  constant.FM_GWCLI_CLN_ENV.html  constant.FM_GWCLI_LDK_ENV.html  constant.FM_GWCLI_LND_ENV.html  constant.FM_GWID_CLN_ENV.html  constant.FM_GWID_LDK_ENV.html  constant.FM_GWID_LND_ENV.html  constant.FM_INVITE_CODE_ENV.html  constant.FM_LIGHTNINGD_BASE_EXECUTABLE_ENV.html  constant.FM_LIGHTNING_CLI_BASE_EXECUTABLE_ENV.html  constant.FM_LIGHTNING_CLI_ENV.html  (+22 more)
devimint/faucet/: fn.get_invite_code.html  fn.run.html  index.html  sidebar-items.js  struct.Faucet.html
devimint/federation/: constant.BASE_PORT.html  constant.FEDIMINTD_API_PORT_OFFSET.html  constant.FEDIMINTD_METRICS_PORT_OFFSET.html  constant.FEDIMINTD_P2P_PORT_OFFSET.html  constant.FEDIMINTD_UI_PORT_OFFSET.html  constant.PORTS_PER_FEDIMINTD.html  fn.cli_set_config_gen_params.html  fn.cli_wait_server_status.html  fn.fedimint_env.html  fn.run_cli_dkg.html  fn.run_cli_dkg_v2.html  fn.run_client_dkg.html  fn.run_config_gen.html  fn.run_dkg.html  fn.set_config_gen_params.html  fn.wait_server_status.html  index.html  sidebar-items.js  struct.Client.html  struct.Federation.html  struct.Fedimintd.html  type.EnvVars.html
devimint/gatewayd/: enum.LdkChainSource.html  index.html  sidebar-items.js  struct.GatewayClient.html  struct.Gatewayd.html
devimintd/: Cargo.toml
devimintd-client/: Cargo.toml
docs/: Cargo.toml  RELEASE_NOTES-v0.4.md  api.md  architecture.md  backup_and_recovery.md  building-new-modules.md  contributing.md  database.md  debugging.md  deploying.md  dev-env.md  dev-running.md  expected_loss.ipynb  fedimint-module.drawio  fuzzing.md  gateway.md  lib.rs  lifecycle.md  lightning_module_v1.md  lightning_module_v2.md  lithning_module_v1.md  macos.md  modular-architecture.md  mutinynet-setup-docs.md  networking.md  nix-ci.md  nix_instructions.md  recoverable_e-cash.md  release-process.md  rustdoc-index.md  secret_derivation.md  setup-docs.md  telemetry.md  tier_calculations.ods  tor-privacy.md  transactions.md  tutorial.md  ui.md  wallet_module.md  wallet_module_v2.md
fedimint-api/: Cargo.toml  delme.rs
fedimint-api-client/: Cargo.toml
fedimint-atomic-broadcast/: Cargo.toml
fedimint-bin-tests/: Cargo.toml
fedimint-bip39/: Cargo.toml
fedimint-bitcoind/: Cargo.toml
fedimint-build/: Cargo.toml
fedimint-cli/: Cargo.toml
fedimint-client/: Cargo.toml
fedimint-client-module/: Cargo.toml  build.rs
fedimint-client-rpc/: Cargo.toml
fedimint-client-stdio/: Cargo.toml
fedimint-client-uniffi/: Cargo.toml
fedimint-client-wasm/: Cargo.toml
fedimint-connectors/: Cargo.toml
fedimint-core/: Cargo.toml
fedimint-cursed-redb/: Cargo.toml
fedimint-db-locked/: Cargo.toml
fedimint-dbdump/: Cargo.toml  README.md
fedimint-dbtool/: Cargo.toml  README.md
fedimint-derive/: Cargo.toml
fedimint-eventlog/: Cargo.toml
fedimint-fjall/: Cargo.toml
(+386103 files in other folders)
