[workspace]
members = [
  "crypto/aead",
  "crypto/derive-secret",
  "crypto/hkdf",
  "crypto/tbs",
  "crypto/tpe",
  "devimint",
  "docs",
  "fedimint-api-client",
  "fedimint-bip39",
  "fedimint-bitcoind",
  "fedimint-build",
  "fedimint-cli",
  "fedimint-client",
  "fedimint-client-module",
  "fedimint-client-wasm",
  "fedimint-core",
  "fedimint-dbtool",
  "fedimint-derive",
  "fedimint-eventlog",
  "fedimint-load-test-tool",
  "fedimint-logging",
  "fedimint-metrics",
  "fedimint-recoverytool",
  "fedimint-recurringd",
  "fedimint-rocksdb",
  "fedimint-server",
  "fedimint-server-core",
  "fedimint-server-tests",
  "fedimint-testing",
  "fedimint-testing-core",
  "fedimint-wasm-tests",
  "fedimint-workspace",
  "fedimintd",
  "fuzz",
  "gateway/fedimint-gateway-client",
  "gateway/fedimint-gateway-common",
  "gateway/fedimint-gateway-server",
  "gateway/fedimint-lightning",
  "gateway/integration_tests",
  "lnurlp",
  "modules/fedimint-dummy-client",
  "modules/fedimint-dummy-common",
  "modules/fedimint-dummy-server",
  "modules/fedimint-dummy-tests",
  "modules/fedimint-empty-client",
  "modules/fedimint-empty-common",
  "modules/fedimint-empty-server",
  "modules/fedimint-gw-client",
  "modules/fedimint-gwv2-client",
  "modules/fedimint-ln-client",
  "modules/fedimint-ln-common",
  "modules/fedimint-ln-server",
  "modules/fedimint-ln-tests",
  "modules/fedimint-lnv2-client",
  "modules/fedimint-lnv2-common",
  "modules/fedimint-lnv2-server",
  "modules/fedimint-lnv2-tests",
  "modules/fedimint-meta-client",
  "modules/fedimint-meta-common",
  "modules/fedimint-meta-server",
  "modules/fedimint-meta-tests",
  "modules/fedimint-mint-client",
  "modules/fedimint-mint-common",
  "modules/fedimint-mint-server",
  "modules/fedimint-mint-tests",
  "modules/fedimint-unknown-common",
  "modules/fedimint-unknown-server",
  "modules/fedimint-wallet-client",
  "modules/fedimint-wallet-common",
  "modules/fedimint-wallet-server",
  "modules/fedimint-wallet-tests",
  "utils/portalloc",
]
resolver = "2"

[workspace.package]
version = "0.7.0-alpha"
authors = ["The Fedimint Developers"]
edition = "2024"
description = "Fedimint is a Federated Chaumian E-Cash Mint, natively compatible with Bitcoin & the Lightning Network"
documentation = "https://github.com/fedimint/fedimint/tree/master/docs"
readme = "README.md"
homepage = "https://fedimint.org"
repository = "https://github.com/fedimint/fedimint"
license = "MIT"
keywords = ["bitcoin", "lightning", "chaumian", "e-cash", "federated"]

[workspace.metadata]
name = "fedimint"
authors = ["The Fedimint Developers"]
edition = "2024"
description = "Fedimint is a Federated Chaumian E-Cash Mint, natively compatible with Bitcoin & the Lightning Network"
documentation = "https://github.com/fedimint/fedimint/tree/master/docs"
readme = "README.md"
homepage = "https://fedimint.org"
repository = "https://github.com/fedimint/fedimint"
license-file = "LICENSE"
keywords = ["bitcoin", "lightning", "chaumian", "e-cash", "federated"]

[workspace.metadata.crane]
name = "fedimint"

[workspace.dependencies]
anyhow = "1.0.97"
aquamarine = "0.5.0"
assert_matches = "1.5.0"
async-channel = "2.3.1"
async-stream = "0.3.6"
async-trait = "0.1.87"
axum = "0.7.9"
base64 = "0.22.1"
base64-url = "3.0.0"
bcrypt = "0.16.0"
bincode = "1.3.3"
bitcoin = { version = "0.32.5", features = ["serde"] }
bitcoincore-rpc = "0.19.0"
bitcoin_hashes = "0.14.0"
bls12_381 = "0.8.0"
bon = "3.3.2"
bytes = "1.10.0"
clap = { version = "4.5.31", features = ["derive", "env"] }
cln-rpc = { package = "fedimint-cln-rpc", version = "0.5.0" }
criterion = "0.5.1"
devimint = { path = "./devimint", version = "=0.7.0-alpha" }
erased-serde = "0.4"
esplora-client = { version = "0.10.0", default-features = false, features = [
  "async-https-rustls",
] }
fedimintd = { path = "./fedimintd", version = "=0.7.0-alpha" }
fedimint-aead = { path = "./crypto/aead", version = "=0.7.0-alpha" }
fedimint-api-client = { path = "./fedimint-api-client", version = "=0.7.0-alpha" }
fedimint-bip39 = { path = "./fedimint-bip39", version = "=0.7.0-alpha" }
fedimint-bitcoind = { path = "./fedimint-bitcoind", version = "=0.7.0-alpha" }
fedimint-build = { path = "./fedimint-build", version = "=0.7.0-alpha" }
fedimint-client = { path = "./fedimint-client", version = "=0.7.0-alpha" }
fedimint-client-module = { path = "./fedimint-client-module", version = "=0.7.0-alpha" }
fedimint-core = { path = "./fedimint-core", version = "=0.7.0-alpha" }
fedimint-derive = { path = "./fedimint-derive", version = "=0.7.0-alpha" }
fedimint-derive-secret = { path = "./crypto/derive-secret", version = "=0.7.0-alpha" }
fedimint-dummy-client = { path = "./modules/fedimint-dummy-client", version = "=0.7.0-alpha" }
fedimint-dummy-common = { path = "./modules/fedimint-dummy-common", version = "=0.7.0-alpha" }
fedimint-dummy-server = { path = "./modules/fedimint-dummy-server", version = "=0.7.0-alpha" }
fedimint-empty-common = { path = "./modules/fedimint-empty-common", version = "=0.7.0-alpha" }
fedimint-eventlog = { path = "./fedimint-eventlog", version = "=0.7.0-alpha" }
fedimint-gateway-common = { package = "fedimint-gateway-common", path = "./gateway/fedimint-gateway-common", version = "=0.7.0-alpha" }
fedimint-gateway-server = { package = "fedimint-gateway-server", path = "./gateway/fedimint-gateway-server", version = "=0.7.0-alpha" }
fedimint-gw-client = { path = "./modules/fedimint-gw-client", version = "=0.7.0-alpha" }
fedimint-gwv2-client = { path = "./modules/fedimint-gwv2-client", version = "=0.7.0-alpha" }
fedimint-lightning = { package = "fedimint-lightning", path = "./gateway/fedimint-lightning", version = "=0.7.0-alpha" }
fedimint-lnv2-client = { path = "./modules/fedimint-lnv2-client", version = "=0.7.0-alpha" }
fedimint-lnv2-common = { path = "./modules/fedimint-lnv2-common", version = "=0.7.0-alpha" }
fedimint-lnv2-server = { path = "./modules/fedimint-lnv2-server", version = "=0.7.0-alpha" }
fedimint-ln-client = { path = "./modules/fedimint-ln-client", version = "=0.7.0-alpha" }
fedimint-ln-common = { path = "./modules/fedimint-ln-common", version = "=0.7.0-alpha" }
fedimint-ln-server = { path = "./modules/fedimint-ln-server", version = "=0.7.0-alpha" }
fedimint-logging = { path = "./fedimint-logging", version = "=0.7.0-alpha" }
fedimint-meta-client = { path = "./modules/fedimint-meta-client", version = "=0.7.0-alpha" }
fedimint-meta-common = { path = "./modules/fedimint-meta-common", version = "=0.7.0-alpha" }
fedimint-meta-server = { path = "./modules/fedimint-meta-server", version = "=0.7.0-alpha" }
fedimint-metrics = { path = "./fedimint-metrics", version = "=0.7.0-alpha" }
fedimint-mint-client = { path = "./modules/fedimint-mint-client", version = "=0.7.0-alpha" }
fedimint-mint-common = { path = "./modules/fedimint-mint-common", version = "=0.7.0-alpha" }
fedimint-mint-server = { path = "./modules/fedimint-mint-server", version = "=0.7.0-alpha" }
fedimint-portalloc = { path = "utils/portalloc", version = "=0.7.0-alpha" }
fedimint-rocksdb = { path = "./fedimint-rocksdb", version = "=0.7.0-alpha" }
fedimint-server = { path = "./fedimint-server", version = "=0.7.0-alpha" }
fedimint-server-core = { path = "./fedimint-server-core", version = "=0.7.0-alpha" }
fedimint-testing = { path = "./fedimint-testing", version = "=0.7.0-alpha" }
fedimint-testing-core = { path = "./fedimint-testing-core", version = "=0.7.0-alpha" }
fedimint-unknown-common = { path = "./modules/fedimint-unknown-common", version = "=0.7.0-alpha" }
fedimint-unknown-server = { path = "./modules/fedimint-unknown-server", version = "=0.7.0-alpha" }
fedimint-wallet-client = { path = "./modules/fedimint-wallet-client", version = "=0.7.0-alpha" }
fedimint-wallet-common = { path = "./modules/fedimint-wallet-common", version = "=0.7.0-alpha" }
fedimint-wallet-server = { path = "./modules/fedimint-wallet-server", version = "=0.7.0-alpha" }
fs-lock = "0.1.7"
futures = "0.3.31"
futures-util = "0.3.30"
group = "0.13.0"
hex = "0.4.3"
hex-conservative = "0.3.0"
hkdf = { package = "fedimint-hkdf", path = "./crypto/hkdf", version = "=0.7.0-alpha" }
hyper = "1.6"
iroh = "0.33.0"
iroh-base = "0.33.0"
itertools = "0.13.0"
jaq-core = "2.1.1"
jaq-json = { version = "1.1.1", features = ["serde_json"] }
lightning = "0.0.125"
lightning-invoice = { version = "0.32.0", features = ["std"] }
miniscript = "12.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = [
  "json",
  "rustls-tls",
  "charset",
  "http2",
  "stream",
], default-features = false }
ring = "0.17.13"
scopeguard = "1.2.0"
secp256k1 = { version = "0.29.0", default-features = false }
semver = "1.0.25"
serde = { version = "1.0.218", features = ["derive"] }
serdect = "0.2.0"
serde-big-array = "0.5.1"
serde_json = "1.0.140"
slotmap = "1.0.7"
sha3 = "0.10.8"
strum = "0.26"
strum_macros = "0.26"
subtle = "2.6.1"
test-log = { version = "0.2", features = ["trace"], default-features = false }
tbs = { package = "fedimint-tbs", path = "./crypto/tbs", version = "=0.7.0-alpha" }
thiserror = "2.0.12"
threshold_crypto = { version = "0.2.1", package = "fedimint-threshold-crypto" }
tokio = "1.43.0"
tikv-jemallocator = "0.5"
tokio-rustls = "0.24.1"
tokio-stream = "0.1.17"
tonic_lnd = { version = "0.2.0", package = "fedimint-tonic-lnd", features = [
  "lightningrpc",
  "routerrpc",
] }
tpe = { package = "fedimint-tpe", path = "./crypto/tpe", version = "=0.7.0-alpha" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
url = "2.5.4"

[profile.dev]
debug = "line-tables-only"

# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
opt-level = 3

# in dev mode optimize crates that are perf-critical (usually just crypto crates)
[profile.dev.package]
ahash = { opt-level = 3 }
aleph-bft-crypto = { opt-level = 3 }
aleph-bft-rmc = { opt-level = 3 }
aleph-bft-types = { opt-level = 3 }
bitcoin_hashes = { opt-level = 3 }
bls12_381 = { opt-level = 3 }
byteorder = { opt-level = 3 }
fedimint-threshold-crypto = { opt-level = 3 }
ff = { opt-level = 3 }
group = { opt-level = 3 }
hashbrown = { opt-level = 3 }
tikv-jemalloc-sys = { opt-level = 3 }
libc = { opt-level = 3 }
memchr = { opt-level = 3 }
pairing = { opt-level = 3 }
ppv-lite86 = { opt-level = 3 }
parity-scale-codec = { opt-level = 3 }
rand_chacha = { opt-level = 3 }
rand_core = { opt-level = 3 }
rand = { opt-level = 3 }
ring = { opt-level = 3 }
# due to some miscompilation(?) this seems actually neccessary,
# otherwise we see segfaults in Nix sandbox
librocksdb-sys = { opt-level = 3 }
regex = { opt-level = 3 }
rustls = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
subtle = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.dev.package."*"] # external dependencies
opt-level = 1

[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false

[profile.ci.build-override]
debug = false
opt-level = 1

[profile.release]
debug = "line-tables-only"
lto = "fat"
codegen-units = 1
