[workspace]
members = [
    "crypto/aead",
    "crypto/derive-secret",
    "crypto/hkdf",
    "crypto/tbs",
    "crypto/tpe",
    "devimint",
    "docs",
    "fedimint-api-client",
    "fedimint-bip39",
    "fedimint-bitcoind",
    "fedimint-build",
    "fedimint-cli",
    "fedimint-client",
    "fedimint-client-module",
    "fedimint-client-rpc",
    "fedimint-client-uniffi",
    "fedimint-client-wasm",
    "fedimint-connectors",
    "fedimint-core",
    "fedimint-cursed-redb",
    "fedimint-db-locked",
    "fedimint-dbtool",
    "fedimint-derive",
    "fedimint-eventlog",
    "fedimint-fountain",
    "fedimint-load-test-tool",
    "fedimint-logging",
    "fedimint-metrics",
    "fedimint-recoverytool",
    "fedimint-recurringd",
    "fedimint-recurringd-tests",
    "fedimint-recurringdv2",
    "fedimint-rocksdb",
    "fedimint-server",
    "fedimint-server-bitcoin-rpc",
    "fedimint-server-core",
    "fedimint-server-tests",
    "fedimint-server-ui",
    "fedimint-testing",
    "fedimint-testing-core",
    "fedimint-ui-common",
    "fedimint-util-error",
    "fedimint-wasm-tests",
    "fedimintd",
    "fedimintd-envs",
    "fuzz",
    "gateway/fedimint-gateway-client",
    "gateway/fedimint-gateway-common",
    "gateway/fedimint-gateway-server",
    "gateway/fedimint-gateway-server-db",
    "gateway/fedimint-gateway-ui",
    "gateway/fedimint-lightning",
    "gateway/integration_tests",
    "lnurlp",
    "modules/fedimint-dummy-client",
    "modules/fedimint-dummy-common",
    "modules/fedimint-dummy-server",
    "modules/fedimint-dummy-tests",
    "modules/fedimint-empty-client",
    "modules/fedimint-empty-common",
    "modules/fedimint-empty-server",
    "modules/fedimint-gw-client",
    "modules/fedimint-gwv2-client",
    "modules/fedimint-ln-client",
    "modules/fedimint-ln-common",
    "modules/fedimint-ln-server",
    "modules/fedimint-ln-tests",
    "modules/fedimint-lnv2-client",
    "modules/fedimint-lnv2-common",
    "modules/fedimint-lnv2-server",
    "modules/fedimint-lnv2-tests",
    "modules/fedimint-meta-client",
    "modules/fedimint-meta-common",
    "modules/fedimint-meta-server",
    "modules/fedimint-meta-tests",
    "modules/fedimint-mint-client",
    "modules/fedimint-mint-common",
    "modules/fedimint-mint-server",
    "modules/fedimint-mint-tests",
    "modules/fedimint-unknown-common",
    "modules/fedimint-unknown-server",
    "modules/fedimint-wallet-client",
    "modules/fedimint-wallet-common",
    "modules/fedimint-wallet-server",
    "modules/fedimint-wallet-tests",
    "utils/portalloc",
]
resolver = "2"

[workspace.package]
authors = ["The Fedimint Developers"]
description = "Fedimint is a Federated Chaumian E-Cash Mint, natively compatible with Bitcoin & the Lightning Network"
documentation = "https://github.com/fedimint/fedimint/tree/master/docs"
edition = "2024"
homepage = "https://fedimint.org"
keywords = ["bitcoin", "lightning", "chaumian", "e-cash", "federated"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fedimint/fedimint"
version = "0.11.0-alpha"

[workspace.metadata]
authors = ["The Fedimint Developers"]
description = "Fedimint is a Federated Chaumian E-Cash Mint, natively compatible with Bitcoin & the Lightning Network"
documentation = "https://github.com/fedimint/fedimint/tree/master/docs"
edition = "2024"
homepage = "https://fedimint.org"
keywords = ["bitcoin", "lightning", "chaumian", "e-cash", "federated"]
license-file = "LICENSE"
name = "fedimint"
readme = "README.md"
repository = "https://github.com/fedimint/fedimint"

[workspace.metadata.crane]
name = "fedimint"

[workspace.dependencies]
aleph-bft = { package = "fedimint-aleph-bft", version = "0.36.0", default-features = false }
anyhow = "1.0.98"
aquamarine = "0.5.0"
argon2 = "0.5.3"
arti-client = { version = "0.33.0", default-features = false }
assert_matches = "1.5.0"
async-channel = "2.5.0"
async-lock = "3.4"
async-recursion = "1.1.1"
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = "0.8.4"
axum-auth = "0.8.1"
axum-extra = "0.12.0"
backon = { version = "1.5.1", default-features = false }
backtrace = "0.3.75"
base64 = "0.22.1"
base64-url = "3.0.0"
bcrypt = "0.16.0"
bech32 = "0.11.0"
bincode = "1.3.3"
bip39 = "2.2.0"
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoin-io = "0.1.2"
bitcoin-units = "0.1.2"
bitcoin_hashes = "0.14.0"
bitcoincore-rpc = "0.19.0"
bitvec = "1.0.1"
bls12_381 = "0.8.0"
bon = "3.6.5"
bytes = "1.10.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive", "env"] }
clap_complete = "4.5.55"
console-subscriber = "0.4.1"
criterion = "0.5.1"
# We need to pin this arti's `curve25519-dalek` dependency, due to `https://rustsec.org/advisories/RUSTSEC-2024-0344` vulnerability
# It's been updated by https://gitlab.torproject.org/tpo/core/arti/-/merge_requests/2211, should be removed in next release.
curve25519-dalek = ">=4.1.3"
devimint = { path = "./devimint", version = "=0.11.0-alpha" }
dirs = "6.0.0"
erased-serde = "0.4"
esplora-client = { version = "0.12.0", default-features = false, features = [
    "async-https-rustls",
    "async",
    "tokio",
] }
tor-rtcompat = { version = "0.33.0" }

fedimint-aead = { path = "./crypto/aead", version = "=0.11.0-alpha" }
fedimint-api-client = { path = "./fedimint-api-client", version = "=0.11.0-alpha" }
fedimint-bip39 = { path = "./fedimint-bip39", version = "=0.11.0-alpha" }
fedimint-bitcoind = { path = "./fedimint-bitcoind", version = "=0.11.0-alpha" }
fedimint-build = { path = "./fedimint-build", version = "=0.11.0-alpha" }
fedimint-client = { path = "./fedimint-client", version = "=0.11.0-alpha" }
fedimint-client-module = { path = "./fedimint-client-module", version = "=0.11.0-alpha" }
fedimint-client-rpc = { path = "./fedimint-client-rpc", version = "=0.11.0-alpha" }
fedimint-connectors = { path = "./fedimint-connectors", version = "=0.11.0-alpha" }
fedimint-core = { path = "./fedimint-core", version = "=0.11.0-alpha" }
fedimint-cursed-redb = { path = "./fedimint-cursed-redb", version = "=0.11.0-alpha" }
fedimint-db-locked = { path = "./fedimint-db-locked", version = "=0.11.0-alpha" }
fedimint-derive = { path = "./fedimint-derive", version = "=0.11.0-alpha" }
fedimint-derive-secret = { path = "./crypto/derive-secret", version = "=0.11.0-alpha" }
fedimint-dummy-client = { path = "./modules/fedimint-dummy-client", version = "=0.11.0-alpha" }
fedimint-dummy-common = { path = "./modules/fedimint-dummy-common", version = "=0.11.0-alpha" }
fedimint-dummy-server = { path = "./modules/fedimint-dummy-server", version = "=0.11.0-alpha" }
fedimint-empty-common = { path = "./modules/fedimint-empty-common", version = "=0.11.0-alpha" }
fedimint-eventlog = { path = "./fedimint-eventlog", version = "=0.11.0-alpha" }
fedimint-gateway-common = { package = "fedimint-gateway-common", path = "./gateway/fedimint-gateway-common", version = "=0.11.0-alpha" }
fedimint-gateway-server = { package = "fedimint-gateway-server", path = "./gateway/fedimint-gateway-server", version = "=0.11.0-alpha" }
fedimint-gateway-server-db = { package = "fedimint-gateway-server-db", path = "./gateway/fedimint-gateway-server-db", version = "=0.11.0-alpha" }
fedimint-gateway-ui = { package = "fedimint-gateway-ui", path = "./gateway/fedimint-gateway-ui", version = "=0.11.0-alpha" }
fedimint-gw-client = { path = "./modules/fedimint-gw-client", version = "=0.11.0-alpha" }
fedimint-gwv2-client = { path = "./modules/fedimint-gwv2-client", version = "=0.11.0-alpha" }
fedimint-lightning = { package = "fedimint-lightning", path = "./gateway/fedimint-lightning", version = "=0.11.0-alpha" }
fedimint-ln-client = { path = "./modules/fedimint-ln-client", version = "=0.11.0-alpha" }
fedimint-ln-common = { path = "./modules/fedimint-ln-common", version = "=0.11.0-alpha" }
fedimint-ln-server = { path = "./modules/fedimint-ln-server", version = "=0.11.0-alpha" }
fedimint-lnv2-client = { path = "./modules/fedimint-lnv2-client", version = "=0.11.0-alpha" }
fedimint-lnv2-common = { path = "./modules/fedimint-lnv2-common", version = "=0.11.0-alpha" }
fedimint-lnv2-server = { path = "./modules/fedimint-lnv2-server", version = "=0.11.0-alpha" }
fedimint-logging = { path = "./fedimint-logging", version = "=0.11.0-alpha" }
fedimint-meta-client = { path = "./modules/fedimint-meta-client", version = "=0.11.0-alpha" }
fedimint-meta-common = { path = "./modules/fedimint-meta-common", version = "=0.11.0-alpha" }
fedimint-meta-server = { path = "./modules/fedimint-meta-server", version = "=0.11.0-alpha" }
fedimint-metrics = { path = "./fedimint-metrics", version = "=0.11.0-alpha" }
fedimint-mint-client = { path = "./modules/fedimint-mint-client", version = "=0.11.0-alpha" }
fedimint-mint-common = { path = "./modules/fedimint-mint-common", version = "=0.11.0-alpha" }
fedimint-mint-server = { path = "./modules/fedimint-mint-server", version = "=0.11.0-alpha" }
fedimint-portalloc = { path = "utils/portalloc", version = "=0.11.0-alpha" }
fedimint-rocksdb = { path = "./fedimint-rocksdb", version = "=0.11.0-alpha" }
fedimint-server = { path = "./fedimint-server", version = "=0.11.0-alpha" }
fedimint-server-bitcoin-rpc = { path = "./fedimint-server-bitcoin-rpc", version = "=0.11.0-alpha" }
fedimint-server-core = { path = "./fedimint-server-core", version = "=0.11.0-alpha" }
fedimint-server-ui = { path = "./fedimint-server-ui", version = "=0.11.0-alpha" }
fedimint-testing = { path = "./fedimint-testing", version = "=0.11.0-alpha" }
fedimint-testing-core = { path = "./fedimint-testing-core", version = "=0.11.0-alpha" }
fedimint-ui-common = { path = "./fedimint-ui-common", version = "=0.11.0-alpha" }
fedimint-unknown-common = { path = "./modules/fedimint-unknown-common", version = "=0.11.0-alpha" }
fedimint-unknown-server = { path = "./modules/fedimint-unknown-server", version = "=0.11.0-alpha" }
fedimint-util-error = { path = "./fedimint-util-error", version = "=0.11.0-alpha" }
fedimint-wallet-client = { path = "./modules/fedimint-wallet-client", version = "=0.11.0-alpha" }
fedimint-wallet-common = { path = "./modules/fedimint-wallet-common", version = "=0.11.0-alpha" }
fedimint-wallet-server = { path = "./modules/fedimint-wallet-server", version = "=0.11.0-alpha" }
fedimintd = { path = "./fedimintd", version = "=0.11.0-alpha" }
fedimintd-envs = { path = "./fedimintd-envs", version = "=0.11.0-alpha" }
ff = "0.13.1"
fs-lock = "=0.1.10"
fs2 = "0.4.3"
futures = "0.3.31"
futures-util = "0.3.30"
getrandom = "0.3.3"
gloo-net = "0.6.0"
gloo-timers = "0.3.0"
group = "0.13.0"
hex = "0.4.3"
hex-conservative = "0.3.0"
hkdf = { package = "fedimint-hkdf", path = "./crypto/hkdf", version = "=0.11.0-alpha" }
honggfuzz = { version = "=0.5.55", default-features = false } # needs to be pinned to the same version `cargo-fuzz` binary uses
hyper = "1.6"
imbl = "5.0.0"
impl-tools = "0.10.3"
iroh = { version = "=0.35.0", default-features = false }
iroh-base = { version = "=0.35.0", default-features = false }
iroh-next = { version = "=0.90.0", default-features = false, package = "iroh" }
iroh-next-base = { version = "=0.90.0", default-features = false, package = "iroh-base" }
iroh-relay = { version = "=0.35.0", default-features = false }
itertools = "0.14.0"
jaq-core = "2.1.1"
jaq-json = { version = "1.1.1", features = ["serde_json"] }
js-sys = "0.3.69"
jsonrpsee = "0.24.9"
jsonrpsee-core = "0.24.9"
jsonrpsee-types = "0.24.8"
jsonrpsee-wasm-client = "0.24.9"
jsonrpsee-ws-client = { version = "0.24.9", default-features = false }
ldk-node = { version = "0.6.1", package = "fedimint-ldk-node" }
lightning = "0.1.3"
lightning-invoice = { version = "0.33.2", features = ["std"] }
lightning-types = "0.2.0"
lnurl-rs = { version = "0.9.0", default-features = false }
lockable = "0.1.1"
lru = "0.16.3"
macro_rules_attribute = "0.2.2"
maud = "0.27.0"
miniscript = "12.3.4"
n0-future = "0.1.3"
nix = "0.29.0"
opentelemetry = "0.28.0"
opentelemetry-otlp = { version = "0.28.0", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
parity-scale-codec = "3.7.5"
pin-project = "1.1.10"
proc-macro2 = "1.0"
prometheus = "0.14.0"
prost = "0.13.5"
qrcode = "0.14"
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
rcgen = "=0.13.2"
redb = "2"
reqwest = { version = "0.12.22", features = [
    "json",
    "rustls-tls",
    "charset",
    "http2",
    "stream",
], default-features = false }
rexie = "0.6.2"
ring = "0.17.14"
rocksdb = { version = "0.22.0" }
rustls-pki-types = { version = "1.12.0" }
scopeguard = "1.2.0"
secp256k1 = { version = "0.29.0", default-features = false }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.141"
serde_millis = "0.1.1"
serdect = "0.2.0"
sha3 = "0.10.8"
slotmap = "1.0.7"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
substring = "1.4.5"
subtle = "2.6.1"
syn = "2.0"
tar = "0.4.44"
tbs = { package = "fedimint-tbs", path = "./crypto/tbs", version = "=0.11.0-alpha" }
tempfile = "3.20.0"
test-log = { version = "0.2", features = ["trace"], default-features = false }
thiserror = "2.0.12"
threshold_crypto = { version = "0.2.1", package = "fedimint-threshold-crypto" }
tikv-jemallocator = "0.5"
time = "0.3.41"
tokio = "1.48.0"
tokio-rustls = { version = "0.26.0", features = ["aws_lc_rs"] }
tokio-stream = "0.1.17"
tokio-test = "0.4.4"
tokio-util = "0.7.15"
tonic = "0.14.2"
tonic_lnd = { version = "0.4.0", package = "fedimint-tonic-lnd", features = [
    "lightningrpc",
    "routerrpc",
] }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.6.6", features = ["cors"] }
tpe = { package = "fedimint-tpe", path = "./crypto/tpe", version = "=0.11.0-alpha" }
tracing = "0.1.41"
tracing-opentelemetry = "0.29.0"
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"
url = "2.5.4"
wasm-bindgen = "=0.2.100" # must match the nix provided wasm-bindgen-cli version
wasm-bindgen-futures = "0.4.42"
wasm-bindgen-test = "0.3.43"
web-sys = "0.3.77"
webpki-roots = "1.0.2"
z32 = "1"

[workspace.lints.clippy]
dbg_macro = "deny"
literal_string_with_formatting_args = "deny"

[profile.dev]
debug = "line-tables-only"

# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
opt-level = 3

# in dev mode optimize crates that are perf-critical (usually just crypto crates)
[profile.dev.package]
ahash = { opt-level = 3 }
aleph-bft-crypto = { opt-level = 3 }
aleph-bft-rmc = { opt-level = 3 }
aleph-bft-types = { opt-level = 3 }
bitcoin_hashes = { opt-level = 3 }
bls12_381 = { opt-level = 3 }
byteorder = { opt-level = 3 }
fedimint-threshold-crypto = { opt-level = 3 }
ff = { opt-level = 3 }
group = { opt-level = 3 }
hashbrown = { opt-level = 3 }
libc = { opt-level = 3 }
memchr = { opt-level = 3 }
pairing = { opt-level = 3 }
parity-scale-codec = { opt-level = 3 }
ppv-lite86 = { opt-level = 3 }
rand = { opt-level = 3 }
rand_chacha = { opt-level = 3 }
rand_core = { opt-level = 3 }
ring = { opt-level = 3 }
tikv-jemalloc-sys = { opt-level = 3 }
# due to some miscompilation(?) this seems actually neccessary,
# otherwise we see segfaults in Nix sandbox
librocksdb-sys = { opt-level = 3 }
regex = { opt-level = 3 }
rustls = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
subtle = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.dev.package."*"] # external dependencies
opt-level = 1

[profile.ci]
debug = "line-tables-only"
incremental = false
inherits = "dev"

[profile.ci.build-override]
debug = false
opt-level = 1

[profile.release]
debug = "line-tables-only"
lto = "thin"
