[package]
name = "config"
version = "0.1.0"
authors = ["elsirion <elsirion@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
hex = "0.4.2"
serde = { version = "1.0.118", features = [ "derive" ] }
serde_json = "1.0.61"
structopt = "0.3.21"
tbs = { path = "../crypto/tbs" }
hbbft = "0.1.1"

[dev-dependencies]
rand = "0.6.5"
