[package]
name = "config"
version = "0.1.0"
authors = ["elsirion <elsirion@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = []
server = ["hbbft"]

[dependencies]
bincode = "1.3.1"
bitcoin = { version = "0.26.0", features = [ "serde" ] }
hbbft = { version = "0.1.1", optional = true }
hex = "0.4.2"
minimint-api = { path = "../minimint-api" }
secp256k1 = { version = "0.20.2", features = [ "serde" ] }
serde = { version = "1.0.118", features = [ "derive" ] }
serde_json = "1.0.61"
structopt = "0.3.21"
tbs = { path = "../crypto/tbs" }

[dev-dependencies]
rand = "0.6.5"
miniscript = "5.1.0"